# qmk_userspace

./: .clang-format  .clang-tidy  .clangd  .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pythonenv  Kconfig  Kconfig.qmk  Makefile  README.md  build.json  build.schema  license.inc  manage.py  pyproject.toml  requirements-docs.txt  ruff.toml
.codespell/: ignore-words.txt
.github/workflows/: periodic_build.yml
cli/: pyproject.toml
cli/src/elpekenin_userspace/: main.py
cli/src/elpekenin_userspace/commands/: args.py  docs.py
cli/src/elpekenin_userspace/commands/generate/: __init__.py  features.py  keycode_str.py  qp_resources.py
commands/: __init__.py  args.py  base.py  codegen.py  docs.py
commands/generate/: __init__.py  features.py  keycode_str.py  qp_resources.py
docs/: conf.py  index.rst  modules.rst  requirements.txt  userspace.rst
docs/extensions/: __init__.py  community_module.py
docs/headers/: build_info.rst
docs/modules/: _hint.rst  _index.rst  allocator.rst  arm_math_m0.rst  build_id.rst  colors.rst  crash.rst  dual_rp.rst  generics.rst  glitch_text.rst  indicators.rst  ledmap.rst  logging.rst  ls0xx.rst  memory.rst  micropython.rst  rng.rst  sanitizer.rst  (+7 more)
elpekenin_userspace/: __main__.py  args.py  build.py  codegen.py  constants.py  error.py  git_helpers.py  keycodes.py  main.py  path.py  result.py
kconf/: features  painter  qmk  rgb  rgb.effects  split
patches/: animation.diff  ee.diff  generic_rotation.diff  il91874.diff  print_no_console.diff  spi_comms.diff  wear_leveling_drivers.h  wl.diff
(+287 files in other folders)
