# project metadata and building
[project]
name = "elpekenin_userspace"
version = "0.0.0a"
dependencies = [
    "gitpython",
    "qmk",  # aka: `import qmk_cli`
    "tqdm",
    "typing_extensions",
]

[project.optional-dependencies]
completion = [
    "argcomplete",
]
docs = [
    "clang==14",  # must match your libclangX.so
    "furo",
    "hawkmoth",
    "sphinx",
    "sphinx-tabs",
]

[project.scripts]
elpekenin_userspace = "elpekenin_userspace.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["elpekenin_userspace*"]

# tools, sorted by name
[tool.mypy]
python_version = "3.9"
strict = true
exclude = ["modules"]

[tool.ruff]
target-version = "py39"
exclude = ["modules"]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "FIX002",  # line contains TODO
    "TD003",  # TODO without link to issue
]
